[gd_scene load_steps=5 format=3 uid="uid://c00xwxnrfntu7"]

[ext_resource type="Script" uid="uid://u2ennius6ykq" path="res://scenes/uis/chat_interface.gd" id="1_eyqnh"]

[sub_resource type="Animation" id="Animation_1"]
resource_name = "slide_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChatPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 400), Vector2(0, 600)]
}

[sub_resource type="Animation" id="Animation_2"]
resource_name = "slide_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChatPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 600), Vector2(0, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"slide_down": SubResource("Animation_1"),
&"slide_up": SubResource("Animation_2")
}

[node name="ChatInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyqnh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1")
}

[node name="ChatPanel" type="Panel" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 800.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ChatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatHistory" type="RichTextLabel" parent="ChatPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="ChatPanel/VBoxContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="ChatPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message..."

[node name="SendButton" type="Button" parent="ChatPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"
